add: ConsultaDTO. fix:Datos de archivos de Consulta para exponer datos segun haga falta

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+#Nombre aplicacion
 spring.application.name=backend
+
+#Base de datos en PostgresSQL - REVISION
+
+#spring.datasource.url=jdbc:postgresql://localhost:5432/backend
+#spring.datasource.username=backend
+#spring.datasource.password=backend
+#spring.datasource.driver-class-name=org.postgresql.Driver
+
+# This will create table automatically in your database
+#spring.jpa.hibernate.ddl-auto=update
