--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 spring.application.name=backend
+
+#Conexion a la base de Datos
+spring.datasource.url=${JDBC_URL}
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.username=${JDBC_USER}
+spring.datasource.password=${JDBC_PASSWORD}
+
+#Configuracion de la base de datos
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
