add: responsive layout

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,3 @@
 {
-    "cSpell.words": [
-        "medilatam",
-        "Medilatam",
-        "webp"
-    ]
+  "cSpell.words": ["Boton", "medilatam", "Medilatam", "webp"]
 }
