--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -37,8 +37,8 @@
 			<optional>true</optional>
 		</dependency>
 		<dependency>
-                                        <groupId>org.postgresql</groupId>
-                                        <artifactId>postgresql</artifactId>
+                                                        <groupId>org.postgresql</groupId>
+                                                        <artifactId>postgresql</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.projectlombok</groupId>
@@ -50,7 +50,12 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-
+	 <dependency>
+	  <groupId>org.springframework</groupId>
+	  <artifactId>spring-web</artifactId>
+	  <version>6.1.5</version>
+	  <type>jar</type>
+	 </dependency>
 	</dependencies>
 
 	<build>
