--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "cSpell.words": ["Boton", "medilatam", "Medilatam", "webp"]
+  "cSpell.words": ["Boton", "heroicons", "medilatam", "Medilatam", "webp"]
 }
