fix: boton de accesibilidad)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,12 @@
 {
-  "cSpell.words": ["Boton", "heroicons", "medilatam", "Medilatam", "webp"]
+  "cSpell.words": [
+    "Accesibility",
+    "atencion",
+    "Atencion",
+    "Boton",
+    "heroicons",
+    "medilatam",
+    "Medilatam",
+    "webp"
+  ]
 }
