--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -56,6 +56,12 @@
 	  <version>6.1.5</version>
 	  <type>jar</type>
 	 </dependency>
+		<!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-crypto -->
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-crypto</artifactId>
+			<version>6.2.1</version>
+		</dependency>
 	</dependencies>
 
 	<build>
