--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.3",
+    "@zegocloud/zego-uikit-prebuilt": "^2.0.1",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18"
