add: Boton de accesibilidad

--- a/frontend/.vscode/settings.json
+++ b/frontend/.vscode/settings.json
@@ -1,3 +1,11 @@
 {
-  "cSpell.words": ["abreviacion", "dias", "Seleccinado", "webp"]
+  "cSpell.words": [
+    "abreviacion",
+    "Accesibility",
+    "Boton",
+    "dias",
+    "Medilatam",
+    "Seleccinado",
+    "webp"
+  ]
 }
