--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@heroicons/react": "^2.1.3",
     "@zegocloud/zego-uikit-prebuilt": "^2.0.1",
+    "accessibility": "^5.0.7",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18"
